--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Journeyman middleware for serving static content",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -14,5 +14,10 @@
   "license": "BSD",
   "dependencies": {
     "mime": "~1.2.7"
+  },
+  "devDependencies": {
+    "mocha": "~1.8.1",
+    "mockery": "~1.4.0",
+    "sinon": "~1.5.2"
   }
 }
